<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_task_item"
        android:icon="@drawable/ic_action_add_task"
        android:title="@string/add_task"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/day_item"
        android:icon="@drawable/ic_action_day"
        android:title="@string/day_view"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/week_item"
        android:icon="@drawable/ic_action_week"
        android:title="@string/week_view"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/year_item"
        android:icon="@drawable/ic_action_year"
        android:title="@string/year_view"
        app:showAsAction="ifRoom|withText"/>
</menu>